--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
 	<link rel="stylesheet" href="files/babbler.css" type="text/css">
 </head>
 <body>
-	<a id="togglepanel" href="#">Hide options</a>
-	<div id="panel">
-		Username: <input id="setuser" type="text" />
-		<input id="changeusername" type="button" value="Change" /><br />
+	<div id="container">
+		<a id="togglepanel" href="#">Hide options</a>
+		<div id="panel">
+			Username: <input id="setuser" type="text" />
+			<input id="changeusername" type="button" value="Change" /><br />
+		</div>
+		<div id="main">
+			<div id="users">
+				<li class="user"></li>
+			</div>
+			<div id="chat"></div>
+			<div id="command">
+				<input id="prompt" type="text" />
+				<input id="send" type="button" value="Send" />
+			</div>
+		</div>
 	</div>
-	<span class="user">&nbsp;</span>
-	<div id="main">
-		<div id="users">
-			<li class="user">&nbsp;</li>
-		</div>
-		<div id="chat"></div>
-		<div id="command">
-			<input id="prompt" type="text" />
-			<input id="send" type="button" value="Send" />
-		</div>
-	</div>	
 	<script src="files/jquery-1.8.2.min.js" type="text/javascript"></script>
 	<script src="files/babbler.js" type="text/javascript"></script>
 </body>
