--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<div id="container">
 		<a id="togglepanel" href="#">Hide options</a>
 		<div id="panel">
-			Username: <input id="setuser" type="text" />
+			<label for="setuser">Username: </label> 
+			<input id="setuser" type="text" />
 			<input id="changeusername" type="button" value="Change" /><br />
 		</div>
 		<div id="main">
