--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<label for="setuser">Username: </label> 
 			<input id="setuser" type="text" />
 			<input id="changeusername" type="button" value="Change" /><br />
+			<input id="clearStorage" type="button" value="Clear cache" /><br />
+			<div id="statusMsg"></div>
 		</div>
 		<div id="main">
 			<div id="users">
@@ -25,6 +27,7 @@
 		</div>
 	</div>
 	<script src="files/jquery-1.8.2.min.js" type="text/javascript"></script>
+	<script src="files/utils.js" type="text/javascript"></script>
 	<script src="files/babbler.js" type="text/javascript"></script>
 </body>
 </html>
